--- a/aplicacaoLoja/Areas/Identity/Pages/Account/Register.cshtml
+++ b/aplicacaoLoja/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,16 +1,16 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Cadastre-se";
 }
 
-<h1>Cadastro</h1>
-
-<div class="row">
+<div class="d-flex justify-content-center">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Crie uma nova conta.</h2>
+            <h1 style="font-weight: bold;">Cadastro</h1>
+            <h2 style="font-size: 1.6rem;">Criar uma nova conta.</h2>
             <hr />
+            <br />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
@@ -18,47 +18,35 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Senha" />
+                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.Password">Senha</label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Senha" />
-                <label asp-for="Input.ConfirmPassword">Confirmar senha</label>
+                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                <label asp-for="Input.ConfirmPassword">Confirmar Senha</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-success">Criar conta</button>
+            <br />
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-success">Cadastrar</button>
         </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
+
+        <hr style="margin: 2rem 0 2rem 0;" />
+
+        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+            <div>
+                <p>
+                    @foreach (var provider in Model.ExternalLogins!)
+                    {
+                        <button type="submit" class="w-100 btn btn-lg btn-warning" style="color: black;" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">Cadastre-se com o Google</button>
+                    }
+                </p>
+            </div>
+        </form>
+        <hr style="margin: 2rem 0 2rem 0;" />
+        <p>
+            <span>Já tem uma conta? </span><a style="text-decoration: none; font-weight: bold;" asp-page="./login" asp-route-returnUrl="@Model.ReturnUrl">Conecte-se</a>
+        </p>
     </div>
 </div>
 
