--- a/aplicacaoLoja/Views/Categorias/Index.cshtml
+++ b/aplicacaoLoja/Views/Categorias/Index.cshtml
@@ -1,14 +1,15 @@
 ﻿@model IEnumerable<aplicacaoLoja.Models.Categoria>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Lista de Categorias";
 }
 
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<h1>Lista de Categorias</h1>
+<br />
+<div class="form-group">
+    <a asp-action="Create"><input type="submit" value="Nova Categoria" class="btn btn-primary bg-success border-0" /></a>
+</div>
+<br />
 <table class="table">
     <thead>
         <tr>
@@ -19,17 +20,18 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.descricao)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.descricao)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.id"><input type="submit" value="Editar" class="btn btn-primary bg-warning text-dark border-0" /></a> |
+                    <a asp-action="Details" asp-route-id="@item.id"><input type="submit" value="Detalhar" class="btn btn-primary border-0" /></a> |
+                    <a asp-action="Delete" asp-route-id="@item.id"><input type="submit" value="Excluir" class="btn btn-primary bg-danger border-0" /></a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
