--- a/aplicacaoLoja/Views/CompraProdutos/Create.cshtml
+++ b/aplicacaoLoja/Views/CompraProdutos/Create.cshtml
@@ -1,37 +1,40 @@
 ﻿@model aplicacaoLoja.Models.CompraProduto
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Nova Compra";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Nova Compra</h1>
 
-<h4>CompraProduto</h4>
 <hr />
+<br />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-controller="CompraProdutos" asp-action="Create" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="produtoID" class="control-label"></label>
-                <select asp-for="produtoID" class ="form-control" asp-items="ViewBag.produtoID"></select>
+                <label asp-for="produtoID" class="control-label">Produto</label>
+                <select asp-for="produtoID" class="form-control" asp-items="ViewBag.produtoID"></select>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="qtde" class="control-label"></label>
                 <input asp-for="qtde" class="form-control" />
                 <span asp-validation-for="qtde" class="text-danger"></span>
             </div>
+            <br />
+            <br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Cadastrar" class="btn btn-primary border-0 bg-success" style="width: 9rem" /> |
+                <a asp-controller="Fornecedores" asp-action="Index"><input value="Voltar" class="btn btn-primary bg-warning text-dark border-0 " style="width: 9rem" /></a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
