--- a/aplicacaoLoja/Views/Fornecedores/Create.cshtml
+++ b/aplicacaoLoja/Views/Fornecedores/Create.cshtml
@@ -1,13 +1,14 @@
 ﻿@model aplicacaoLoja.Models.Fornecedor
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Novo Fornecedor";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Novo Fornecedor</h1>
 
-<h4>Fornecedor</h4>
 <hr />
+<br />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -17,32 +18,36 @@
                 <input asp-for="nome" class="form-control" />
                 <span asp-validation-for="nome" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="telefone" class="control-label"></label>
                 <input asp-for="telefone" class="form-control" />
                 <span asp-validation-for="telefone" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="endereco" class="control-label"></label>
                 <input asp-for="endereco" class="form-control" />
                 <span asp-validation-for="endereco" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="cnpj" class="control-label"></label>
                 <input asp-for="cnpj" class="form-control" />
                 <span asp-validation-for="cnpj" class="text-danger"></span>
             </div>
+            <br />
+            <br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Cadastrar" class="btn btn-primary border-0 bg-success" style="width: 9rem" /> |
+                <a asp-action="Index"><input value="Voltar" class="btn btn-primary bg-warning text-dark border-0 " style="width: 9rem" /></a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
