--- a/aplicacaoLoja/Views/Vendas/Details.cshtml
+++ b/aplicacaoLoja/Views/Vendas/Details.cshtml
@@ -1,54 +1,56 @@
 ﻿@model aplicacaoLoja.Models.Venda
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhar";
 }
 
-<h1>Details</h1>
-
+<h1>Detalhar</h1>
+<br />
+<br />
 <div>
     <h4>Venda</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.data)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.data)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.cliente)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.cliente.cpf)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.cliente.nome)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.funcionario)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.funcionario.cpf)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.funcionario.nome)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.produto)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.produto.descricao)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.quantidade)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.quantidade)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.total)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.total)
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<br />
+<div class="form-group">
+    <a asp-action="Edit" asp-route-id="@Model?.id"><input value="Editar" class="btn btn-primary bg-success border-0 " style="width: 6rem" /></a> |
+    <a asp-action="Index"><input value="Voltar" class="btn btn-primary bg-warning text-dark border-0 " style="width: 6rem" /></a>
 </div>
