Funções de busca
Implementação das funções de busca

--- a/aplicacaoLoja/Views/Funcionarios/Create.cshtml
+++ b/aplicacaoLoja/Views/Funcionarios/Create.cshtml
@@ -39,7 +39,7 @@
             <br />
             <div class="form-group">
                 <label asp-for="salario" class="control-label"></label>
-                <input asp-for="salario" class="form-control" />
+                <input type="number" asp-for="salario" class="form-control" />
                 <span asp-validation-for="salario" class="text-danger"></span>
             </div>
             <br />
