feat: implementação filtro de busca

--- a/aplicacaoLoja/Views/Fornecedores/Index.cshtml
+++ b/aplicacaoLoja/Views/Fornecedores/Index.cshtml
@@ -11,7 +11,27 @@
     <a asp-action="Create"><input type="submit" value="Novo Fornecedor" class="btn btn-primary bg-success border-0" /></a> |
     <a asp-controller="CompraProdutos" asp-action="Create"><input type="submit" value="Nova Compra" class="btn btn-primary bg-warning border-0 text-dark" /></a>
 </div>
+
 <br />
+<br />
+
+<form asp-action="Index" method="get" class="row g-3">
+    <div class="form-actions no-color row g-3">
+        <div class="col-md-5">
+            <label>Buscar</label>
+            <div class="input-group">
+                <input type="text" name="busca" value="" class="form-control" placeholder="Fornecedor...">
+                <div class="input-group-append" id="button-addon4">
+                    <input type="submit" value="Filtrar" class="btn btn-primary bg-warning text-dark border-0" />
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
+
+<br />
+<br />
+
 <table class="table">
     <thead>
         <tr>
