--- a/aplicacaoLoja/Views/Clientes/Index.cshtml
+++ b/aplicacaoLoja/Views/Clientes/Index.cshtml
@@ -10,7 +10,27 @@
 <div class="form-group">
     <a asp-action="Create"><input type="submit" value="Novo Cliente" class="btn btn-primary bg-success border-0" /></a>
 </div>
+
 <br />
+<br />
+
+<form asp-action="Index" method="get" class="row g-3">
+    <div class="form-actions no-color row g-3">
+        <div class="col-md-5">
+            <label>Buscar</label>
+            <div class="input-group">
+                <input type="text" name="busca" value="" class="form-control" placeholder="Nome...">
+                <div class="input-group-append" id="button-addon4">
+                    <input type="submit" value="Filtrar" class="btn btn-primary bg-warning text-dark border-0" />
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
+
+<br />
+<br />
+
 <table class="table">
     <thead>
         <tr>
