--- a/aplicacaoLoja/Views/Vendas/Index.cshtml
+++ b/aplicacaoLoja/Views/Vendas/Index.cshtml
@@ -7,9 +7,39 @@
 <h1>Lista de Vendas</h1>
 <br />
 <div class="form-group">
-    <a asp-action="Create"><input type="submit" value="Novo Produto" class="btn btn-primary bg-success border-0" /></a>
+    <a asp-action="Create"><input type="submit" value="Nova Venda" class="btn btn-primary bg-success border-0" /></a>
 </div>
+
 <br />
+<br />
+
+<form asp-action="Index" method="get" class="row g-3">
+    <div class="form-actions no-color row g-3">
+        <div class="col-md-2">
+            <label for="tipo">Filtrar</label>
+            <select class="form-select" name="tipo" id="tipo">
+                <option value="todos" selected>Escolha...</option>
+                <option value="cliente">Cliente</option>
+                <option value="funcionario">Funcionário</option>
+                <option value="produto">Produto</option>
+            </select>
+        </div>
+        <br />
+        <div class="col-md-5">
+            <label>Buscar</label>
+            <div class="input-group">
+                <input type="text" name="busca" value="" class="form-control" placeholder="Venda...">
+                <div class="input-group-append" id="button-addon4">
+                    <input type="submit" value="Filtrar" class="btn btn-primary bg-warning text-dark border-0" />
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
+
+<br />
+<br />
+
 <table class="table">
     <thead>
         <tr>
