--- a/aplicacaoLoja/Views/Fornecedores/Index.cshtml
+++ b/aplicacaoLoja/Views/Fornecedores/Index.cshtml
@@ -9,7 +9,8 @@
 <br />
 <div class="form-group">
     <a asp-action="Create"><input type="submit" value="Novo Fornecedor" class="btn btn-primary bg-success border-0" /></a> |
-    <a asp-controller="CompraProdutos" asp-action="Create"><input type="submit" value="Nova Compra" class="btn btn-primary bg-warning border-0 text-dark" /></a>
+    <a asp-controller="CompraProdutos" asp-action="Create"><input type="submit" value="Nova Compra" class="btn btn-primary bg-warning border-0 text-dark" /></a> | 
+    <a asp-controller="dados" asp-action="Fornecedores"><input type="submit" value="Gerar Dados" class="btn btn-primary border-0" /></a>
 </div>
 
 <br />
