--- a/aplicacaoLoja/Views/Funcionarios/Index.cshtml
+++ b/aplicacaoLoja/Views/Funcionarios/Index.cshtml
@@ -8,7 +8,8 @@
 <h1>Lista Funcionários</h1>
 <br />
 <div class="form-group">
-    <a asp-action="Create"><input type="submit" value="Novo Funcionário" class="btn btn-primary bg-success border-0" /></a>
+    <a asp-action="Create"><input type="submit" value="Novo Funcionário" class="btn btn-primary bg-success border-0" /></a> | 
+    <a asp-controller="dados" asp-action="Funcionarios"><input type="submit" value="Gerar Dados" class="btn btn-primary border-0" /></a>
 </div>
 
 <br />
