--- a/aplicacaoLoja/Views/Produtos/Index.cshtml
+++ b/aplicacaoLoja/Views/Produtos/Index.cshtml
@@ -9,7 +9,8 @@
 <br />
 
 <div class="form-group">
-    <a asp-action="Create"><input type="submit" value="Novo Produto" class="btn btn-primary bg-success border-0" /></a>
+    <a asp-action="Create"><input type="submit" value="Novo Produto" class="btn btn-primary bg-success border-0" /></a> |
+    <a asp-controller="dados" asp-action="Produtos"><input type="submit" value="Gerar Dados" class="btn btn-primary border-0" /></a>
 </div>
 
 <br />
