--- a/aplicacaoLoja/Views/Vendas/Index.cshtml
+++ b/aplicacaoLoja/Views/Vendas/Index.cshtml
@@ -7,7 +7,8 @@
 <h1>Lista de Vendas</h1>
 <br />
 <div class="form-group">
-    <a asp-action="Create"><input type="submit" value="Nova Venda" class="btn btn-primary bg-success border-0" /></a>
+    <a asp-action="Create"><input type="submit" value="Nova Venda" class="btn btn-primary bg-success border-0" /></a> |
+    <a asp-controller="dados" asp-action="Vendas"><input type="submit" value="Gerar Dados" class="btn btn-primary border-0" /></a>
 </div>
 
 <br />
