--- a/aplicacaoLoja/Views/Shared/_Layout.cshtml
+++ b/aplicacaoLoja/Views/Shared/_Layout.cshtml
@@ -41,12 +41,15 @@
                                     <ul class="dropdown-menu dropdown-menu-light">
                                         <a class="nav-link text-dark" asp-area="" asp-controller="Produtos" asp-action="Index">Lista de Produtos</a>
                                         <a class="nav-link text-dark" asp-area="" asp-controller="Fornecedores" asp-action="Index">Fornecedores</a>
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="CompraProdutos" asp-action="Index">Comprar Produtos</a>
                                     </ul>
                                 </li>
                             </ul>
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Vendas" asp-action="Index">Vendas</a>
                             </li>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Agrupamento" asp-action="AgrVendas">Agrupamento</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Pivot" asp-action="PivotVendas">Pivot</a>
                         </div>
                     </ul>
                 </div>
