--- a/aplicacaoLoja/Views/Vendas/Index.cshtml
+++ b/aplicacaoLoja/Views/Vendas/Index.cshtml
@@ -41,7 +41,7 @@
 <br />
 <br />
 
-<p>Total de vendas: @ViewBag.Total</p>
+<p style="width: 18rem; padding: 0.5rem; border: 1px solid grey; border-radius: 5px; text-aling: center">Total de Vendas: R$ @ViewBag.Total</p>
 
 <br />
 
