--- a/aplicacaoLoja/Views/Agrupamento/AgrVendas.cshtml
+++ b/aplicacaoLoja/Views/Agrupamento/AgrVendas.cshtml
@@ -1,25 +1,25 @@
 ﻿@model IEnumerable<aplicacaoLoja.Models.Consulta.Agrupamento.AgrVendas>
 
 @{
-    ViewData["Title"] = "AgrVendas";
+    ViewData["Title"] = "Agrupamento";
 }
 
-<h1>AgrVendas</h1>
+<h1>Agrupamento de Vendas</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<br />
+<br />
+
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.clienteId)
+                ID
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.quantidade)
+                Quantidade
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.total)
+                Total
             </th>
             <th></th>
         </tr>
@@ -35,11 +35,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.total)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
             </td>
         </tr>
 }
