--- a/aplicacaoLoja/Views/Pivot/PivotVendas.cshtml
+++ b/aplicacaoLoja/Views/Pivot/PivotVendas.cshtml
@@ -1,14 +1,34 @@
 ﻿@model IEnumerable<aplicacaoLoja.Models.Consulta.Pivot.ConsultaPivot>
 
 @{
-    ViewData["Title"] = "PivotVendas";
+    ViewData["Title"] = "Pivot Vendas";
 }
 
 <h1>PivotVendas</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<br />
+<br />
+
+<form asp-action="PivotVendas" method="get" class="row g-3">
+    <div class="form-actions no-color row g-3">
+        <div class="col-md-2">
+            <select class="form-select" name="ano" id="ano">
+                <option value="todos" selected>Ano...</option>
+                <option value="2020">2020</option>
+                <option value="2021">2021</option>
+                <option value="2022">2022</option>
+                <option value="2023">2023</option>
+            </select>
+        </div>
+        <div class="input-group-append col-md-5" id="button-addon4" >
+            <input type="submit" value="Filtrar" class="btn btn-primary bg-warning text-dark border-0" />
+        </div>
+    </div>
+</form>
+
+<br />
+<br />
+
 <table class="table">
     <thead>
         <tr>
@@ -95,11 +115,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.mes12)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
             </td>
         </tr>
 }
